--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 Scans our talent network to create the optimal team for your
                 project
               </p>
-              <img src="/images/icon-team-builder.svg" alt="team-builder img" />
+              <img src="images/icon-team-builder.svg" alt="team-builder img" />
             </div>
           </div>
 
@@ -69,7 +69,7 @@
             <div class="textBox">
               <h2>Karma</h2>
               <p>Regularly evaluates our talent to ensure quality</p>
-              <img src="/images/icon-karma.svg" alt="karma img" />
+              <img src="images/icon-karma.svg" alt="karma img" />
             </div>
           </div>
         </section>
@@ -81,7 +81,7 @@
             <p>
               Uses data from past projects to provide better delivery estimates
             </p>
-            <img src="/images/icon-calculator.svg" alt="calculator img" />
+            <img src="images/icon-calculator.svg" alt="calculator img" />
           </div>
         </section>
       </div>
